--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "profile",
-  "private": true,
-  "dependencies": {}
+  "engines": {
+    "node": "8.7.0"
+  },
+  "scripts": {
+    "build": "cd client && npm install && npm run build && cd ..",
+    "deploy": "cp -a client/build/. public/",
+    "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
+  }
 }
